<resources>
    <string name="app_name">FliqaIndia Assignment</string>
    <string name="app_logo">App Logo</string>
    <string name="menu_button">Menu</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="portfolio">Portfolio</string>
    <string name="learning">Learning</string>
    <string name="blog">Blog</string>
    <string name="about_us">About Us</string>
    <string name="home_images">Home Images</string>
    <string name="why_choose_us">Why Choose Us</string>
    <string name="about_us_bio">FliqaIndia is one of the leading creative platforms in India where you can get everything under one roof. We provide 24*7 Photography services, whether it could be wedding photography or a destination shoot. We also provide you with a wide range of graphic design services, full-day photography, music video shoot and many more. You can book a free consultation today to see how passionately our teams work.\nCheckout our lists of services.</string>
    <string name="services_bio_1">We provide 24*7 Photography services, whether it could be wedding photography or a destination shoot</string>
    <string name="services_bio_2">Quality photography at a price that fits your budget. Our affordable packages ensure you get exceptional service.</string>
    <string name="services_bio_3">With a track record of excellence, our team\'s proven expertise ensures that every moment is captured with precision and skill.</string>
    <string name="services_bio_4">Award-winning teams bring unmatched expertise and creativity to every photo, ensuring your moments are captured.</string>
    <string name="services_bio_5">We capture moments with an artistic flair, ensuring your memories are transformed into timeless works of art.</string>
    <string name="services_bio_6">Our team offers customized packages specific requirements, ensuring you get the perfect coverage for your special moments.</string>
    <string name="know_more">Know More</string>
    <string name="about_us_info">FliqaIndia is one of the leading creative platforms in India where you can get everything under one roof. We have a team of experts for different types of photography and cinematography, whether it could be wedding photography or cute baby portrait. We are blessed to witness and preserve the magical moments that unfold. With each click, we freeze emotions, stolen glances, and heartfelt exchanges, encapsulating the essence of love.\nWe started our journey in Kolkata in the year 2019 as a Professional Wedding photography team, Gradually Fliqa India is making footprints in other sections like Event management, and graphic designing, also started Photography courses.</string>
    <string name="photography_videography">Photography \u0026 Videography</string>
    <string name="by_categories">By Categories</string>
    <string name="by_location">By Location</string>
    <string name="contact_bio">Contact a Creative Expert for Free\nWe\'d love to assist you! 24*7, 365 days</string>
    <string name="call_no">Call +91 96418 17485</string>
    <string name="email">Email Address</string>
    <string name="search">Search</string>
    <string name="information">Information</string>
    <string name="branding">Branding</string>
    <string name="design">Design</string>
    <string name="marketing">Marketing</string>
    <string name="advertisement">Advertisement</string>
    <string name="contact">Contact</string>
    <string name="jobs">Jobs</string>
    <string name="press_kit">Press Kit</string>
    <string name="get_the_fliqaindia_app">Get the FliqaIndia App</string>
    <string name="address">Address - 7th Floor, Webel Bhavan Premises, Monibhandar Building, GP Block, Sector V, Bidhannagar, Kolkata, West Bengal 700091</string>
    <string name="terms_condition">Terms \u0026 Condition</string>
    <string name="fliqa_india">Fliqa India \u2122</string>
    <string name="_2023_fliqa_india_corporation_inc_all_rights_reserved">\u00A9 2023 Fliqa india Corporation Inc. All rights reserved.</string>
    <string name="join_our_team">Join Our Team</string>
    <string name="want_to_be_partner">Want to be Partner?</string>
    <string name="cookies">Cookies</string>
</resources>