<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logoGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toStartOf="@+id/logoGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/menuCloseBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/close"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appLogo" />

    <LinearLayout
        android:id="@+id/menuItemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo">

        <TextView
            style="@style/menuItemStyle"
            android:text="@string/home" />

        <TextView
            style="@style/menuItemStyle"
            android:text="@string/services" />

        <TextView
            style="@style/menuItemStyle"
            android:text="@string/portfolio" />

        <TextView
            style="@style/menuItemStyle"
            android:text="@string/learning" />

        <TextView
            style="@style/menuItemStyle"
            android:text="@string/blog" />

        <TextView
            style="@style/menuItemStyle"
            android:text="@string/about_us" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>